--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
             <p>Insira o preço do combustivel</p>
             <input type="number" name="txtn3" id="txtn3">
         </div>
-        <div class="ganhos">
-            <p>Insira seus ganhos do dia</p>
+        <div class="ganhos1">
+            <p>Insira seus ganhos Uber</p>
             <input type="number" name="txtn4" id="txtn4">
+        </div>
+        <div class="ganhos2">
+            <p>Insira seus ganhos 99</p>
+            <input type="number" name="txtn5" id="txtn5">
         </div>
         <div class="somar"> <input type="button" value="Somar" onclick="somar()"></div>
        
